Fix menu bug on mobile

--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -15,6 +15,8 @@
     right: 0
     filter: blur(2px)
     opacity: 0.9
+  &.menuActive
+    background-color: rgba(255,255,255,1)
 
 .title
   font-size: 20px
@@ -44,7 +46,7 @@
   background: #fff
   opacity: 0
   transition: all 0.5s ease-out
-  margin-top: 50px
+  padding-top: 50px
   .menuActive &
     visibility: visible
     opacity: 1
